test/classes/nilability/error-method-on-nilable-shared.good
error-method-on-nilable-shared.chpl:14: warning: borrowed MyClass?
error-method-on-nilable-shared.chpl:5: In function 'test':
error-method-on-nilable-shared.chpl:11: error: unresolved call 'shared MyClass?.mymethod()'
error-method-on-nilable-shared.chpl:3: note: this candidate did not match: MyClass.mymethod()
error-method-on-nilable-shared.chpl:11: note: because method call receiver with type shared MyClass?
error-method-on-nilable-shared.chpl:3: note: is passed to formal 'this: borrowed MyClass'
error-method-on-nilable-shared.chpl:11: note: try to apply the postfix ! operator to method call receiver
